public/main.css
@import "tailwindcss" source("../frontend");

@font-face {
	font-family: "Fragment";
	src:
		url("fonts/FragmentLight.woff2") format("woff2"),
		url("fonts/FragmentLight.woff") format("woff");
	font-weight: 300;
	font-style: normal;
	font-display: swap;
}

@font-face {
	font-family: "Fragment";
	src:
		url("fonts/FragmentRegular.woff2") format("woff2"),
		url("fonts/FragmentRegular.woff") format("woff");
	font-weight: 400;
	font-style: normal;
	font-display: swap;
}

@font-face {
	font-family: "Geist";
	src: url("https://fonts.gstatic.com/s/geist/v4/gyByhwUxId8gMEwcGFWNOITd.woff2")
		format("woff2");
	font-weight: 400;
	font-style: normal;
	font-display: swap;
	font-variation-settings: "wght" 300;
}

@font-face {
	font-family: "Geist";
	src: url("https://fonts.gstatic.com/s/geist/v4/gyByhwUxId8gMEwcGFWNOITd.woff2")
		format("woff2");
	font-weight: 500;
	font-style: normal;
	font-display: swap;
	font-variation-settings: "wght" 400;
}

@theme {
	--font-serif: Fragment, Georgia, "Times New Roman", Times, serif;
	--font-sans: Geist, Helvetica, -apple-system, system-ui, sans-serif;

	--tracking-normal: 0.01em;

	--color-*: initial;
	--color-white: #fff;
	--color-feather-100: #c8cfd2;
	--color-phoenix-40: #e499a6;
	--color-phoenix-100: #db4c64;
	--color-mana-40: #9b9eaa;
	--color-mana-100: #6558a1;
	--color-mana-200: #312b4d;
	--color-mist-20: #ecedf8;
	--color-mist-40: #dee1e3;
	--color-mist-60: #a4a9ac;
	--color-mist-80: #737579;
	--color-mist-100: #4f4f53;

	--shadow-whisper: inset 0 0 1em #97baff8c;
	--shadow-shimmer: inset 0 0 1em #79a7ed99;
	--shadow-glow: inset 0 0 2em #2d37ba73;
	--shadow-bleed: inset 0 0 2em #db4c6466;
}

